--- a/mapo sk/css/index.css
+++ b/mapo sk/css/index.css
@@ -16,6 +16,24 @@ textarea {
     resize: none;
 }
 
+/* slide*/
+.swiper {
+    width: 100%;
+    height: 100%;
+    color:white
+}
+.swiper-button-next,
+.swiper-button-prev {
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 10px;
+    padding: 20px 25px;
+    border-radius: 50%;
+    color: #fff !important;
+    fill: black !important;
+    stroke: black !important;
+}
+
 body{
     display: flex;
     justify-content: center;
@@ -34,9 +52,10 @@ header{
     height: 60px;
     line-height: 60px;
     background-color: #fff;
-    background-color: red;
+    /* background-color: red; */
     flex-flow: row nowrap;
-    min-width: 500px;
+    min-width: 530px;
+    z-index: 9999;
 }
 
 .nav-up{
@@ -44,7 +63,7 @@ header{
 }
 
 .logo{
-    width: 100px;
+    width: 120px;
     height: 100%;
     background-color: chartreuse;
     text-align: center;
@@ -60,15 +79,14 @@ header{
 .g_nav >ul{
     display: flex;
     margin: 0 auto;
-    width: 400px;
+    width: 600px;
     justify-content: space-around;
     /* line-height: 60px; */
-    font-size: 10px;
+    font-size: 15px;
     /* font-weight: 600; */
+    background-color: #fff;
 }
-.g_nav ul li:hover{
 
-}
 .g_nav ul li:hover{
     text-decoration: underline;
     text-decoration-color: chartreuse;
@@ -79,17 +97,36 @@ header{
     position: absolute;
     left: 0;
     right: 0;
-    top: 40px;
+    top: 60px;
     z-index: 999;
     min-width: 1100px;
-    height: 341px;
+    height: 150px;
     background-color: #1ec545;
-    font-size: 0;
+    font-size: 14px;
     text-align: center;
     width: 100%;
 }
+.g_nav .g_nav_drop_cont > li {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    width: 150px;
+    height: 150px;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+.g_nav .g_nav_drop_cont > li:hover{
+    background-color: #0fb93c;
+}
 
-
+.g_nav .g_nav_drop_cont > li >ul {
+    display: flex;
+    color: #fff;
+    padding-left: 30px;
+    line-height: 1.2;
+    text-align: left;
+    flex-flow: column nowrap;
+}
 
 .change_language{
     width: 100px;
@@ -123,31 +160,36 @@ main{
     margin: 0 auto;
     margin-top: 60px;
     width: 100%;
-    height: 300px;
+    min-width: 500px;
+    height: 500px;
     background-color: aqua;
 }
 main video{
     margin: 0 auto;
+    width: 100%;
+    height: 500px;
+}
+main img{
+    margin: 0 auto;
+    width: 100%;
 }
 section{
     width: 100%;
-    height: 400px;
+    height: 500px;
     border-top: 1px solid blue;
     background-color: rgb(245, 245, 236);
 }
-main video{
-    width: 100%;
-    height: 300px
-}
+
 
 .main_content{
-    padding : 0 150px;
+    /* width: 100%; */
+    padding : 0 100px;
 }
 
 .section_news{
     width: 100%;
     height: 300px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .section_news ul{
@@ -162,13 +204,14 @@ main video{
 
 .section_news .news_cont{
     margin: 0.5rem;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     padding-left: 5px;
     background-color: chartreuse;
 }
 
 .section_news .news_cont .news_box{
+    margin: 1.4rem 0rem;
     width: 130px;
     height: 40px;
     text-overflow: ellipsis;
@@ -181,6 +224,10 @@ main video{
     height: 44px;
     margin-top: 10px;
     font-size: 14px;
+}
+
+.section_news .news_cont .goto{
+
 }
 
 
@@ -202,13 +249,75 @@ main video{
 .section_product ul{
     margin: 20px auto;
     /* display: -ms-inline-grid; */
-    width: 500px;
+    width: 620px;
 }
 .section_product li{
+    opacity: 1;
+    filter: alpha(opacity=100);
+    /* filter: blur(1px); */
+    /* filter: grayscale(100%); */
+    /* filter: sepia(100%); */
+    /* filter:saturate(10);  */
+    /* saturate : 채도변경, 값 올릴수록 rgb스런 느낌남 */
+    /* filter:hue-rotate(100deg); */
+    /* hue-rotate : 색조변경, 360deg까지 */
+    /* filter:invert(90%); */
+    /* invert : 반전효과 */
+    /* filter:opacity(0.5); */
+    /* filter:brightness(5); */
+    /* filter:contrast(2); */
+    /* contrast : 대조 효과 */
+    /* filter:drop-shadow(10px 10px 5px rgba(0,0,0,0.5)); */
     width: auto;
     display: inline-block;
+    cursor: pointer;
+    position: relative;
 }
 .section_product ul li img{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
+}
+.section_product li:hover .up_text{
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.section_product li:hover .up_text dl{
+    bottom: 30px;
+}
+
+
+.up_text{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(58, 62, 80, 0.5);
+    font-size: 15px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    transition: opacity .3s;
+}
+.up_text dl {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    padding-top: 70px;
+    padding-left: 10px;
+    color: #fff;
+    transition: bottom .3s;
+}
+.up_text dl dt {
+    margin-bottom: 2px;
+    font-size: 18px;
+}
+
+.up_text dl dd {
+    margin: 0;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
