--- a/mapo sk/css/index.css
+++ b/mapo sk/css/index.css
@@ -1,4 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@500&display=swap');
+
+
+@font-face {
+  font-family: 'NanumSquare-L';
+  src: url("../NanumSquareOTFLight.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  src: url("../NanumSquareOTFRegular.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'NanumSquare-B';
+  src: url("../NanumSquareOTFBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'NanumSquare-EB';
+  src: url("../NanumSquareOTFExtraBold.woff") format("woff");
+}
+
+
+/* font-family: 'Nanum Gothic', sans-serif; */
+/* font-family: 'Noto Sans KR', sans-serif; */
+
 
 a, body, p, h1, h2, h3, ol, ul, li, table ,th, td, input, textarea,button, select{
     margin: 0;
@@ -72,6 +99,7 @@ header{
     line-height: 80px;
     text-transform: uppercase;
     font-weight: bolder;
+    font-family: 'Nanum Gothic', sans-serif;
 
 }
 .g_nav{
@@ -256,7 +284,7 @@ main img{
     width: 500px;
     height: 200px;
     z-index: 50;
-    background: red;
+    /* background: red; */
 }
 
 .swiper-logo{
@@ -269,7 +297,7 @@ main img{
     width: 300px;
     height: 100px;
     z-index: 50;
-    background: red;
+    /* background: red; */
 }
 
 
@@ -326,7 +354,7 @@ main img{
     right: 160px;
     width: 190px;
     height: 100px;
-    background-color: red;
+    /* background-color: red; */
     /* background: url(img/sprite.png) no-repeat; */
     -webkit-background-size: 474px 1500px;
     background-size: 474px 1500px;
@@ -335,12 +363,12 @@ main img{
     position: absolute;
     left: 160px;
     bottom: 157px;
-    background-color: red;
+    /* background-color: red; */
   }
   
   .main_slide .slide_title {
     margin-bottom: 32px;
-    font-family: "NanumSquare-EB", "나눔고딕", "Dotum", "돋움", "Helvetica", "Arial", "AppleSDGothicNeo", sans-serif;
+    font-family: 'NanumSquare-EB';
     font-size: 36px;
     line-height: 46px;
   }
@@ -427,9 +455,14 @@ main img{
     bottom: 198px;
     width: 46px;
     height: 46px;
-    background-color: red;
+    /* background-color: red; */
+    background-color: rgba(255, 255, 255, 0.5);
+    filter: alpha(opacity=100);
+    font-size: 24px;
     color: #ffffff;
     transition: opacity .3s;
+    border: none;
+    border-radius: 50%;
   }
   
   .main_slide .btn_prev:hover, .main_slide .btn_prev:focus, .main_slide .btn_next:hover, .main_slide .btn_next:focus {
