--- a/mapo sk/css/index.css
+++ b/mapo sk/css/index.css
@@ -64,19 +64,27 @@ body{
 }
 
 header{
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    background-color: #fff;
-    /* background-color: red; */
-    flex-flow: row nowrap;
-    min-width: 530px;
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 9999;
+}
+
+.header_cont{
+  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  background-color: #fff;
+  /* background-color: red; */
+  flex-flow: row nowrap;
+  min-width: 530px;
+  max-width: 1200px;
+
 }
 
 .nav-up{
@@ -99,15 +107,15 @@ header{
     line-height: 80px;
     text-transform: uppercase;
     font-weight: bolder;
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'NanumSquare-EB', sans-serif;
 
 }
-.g_nav{
+.gnb_menu{
     width: 100%;
     height: 100%;
 }
 
-.g_nav >ul{
+.gnb_menu >ul{
     display: flex;
     margin: 0 auto;
     width: 600px;
@@ -118,12 +126,12 @@ header{
     background-color: #fff;
 }
 
-.g_nav ul li:hover{
-    text-decoration: underline;
+.gnb_menu ul li:hover{
+    /* text-decoration: underline; */
     text-decoration-color: chartreuse;
 }
 
-.g_nav_drop_cont{
+.gnb_dropMenu_wrap{
     display: none;
     position: absolute;
     left: 0;
@@ -137,7 +145,7 @@ header{
     font-size: 14px;
     text-align: center;
 }
-.g_nav .g_nav_drop_cont > li {
+.gnb_menu .gnb_dropMenu_wrap > li {
     position: relative;
     display: inline-block;
     vertical-align: top;
@@ -146,14 +154,15 @@ header{
     -webkit-transition: all .3s;
     transition: all .3s;
 }
-.g_nav .g_nav_drop_cont > li:hover{
+.gnb_menu .gnb_dropMenu_wrap > li:hover{
     background-color: #0fb93c;
 }
-.g_nav .g_nav_drop_cont > li>span:hover{
+.gnb_menu .gnb_dropMenu_wrap > li>span:hover{
     color:#ffff
 }
 
-.g_nav .g_nav_drop_cont > li >.gnb_dropMenu {
+
+.gnb_menu .gnb_dropMenu_wrap > li >.gnb_dropMenu {
     display: flex;
     color: #fff;
     line-height: 1.2;
@@ -162,20 +171,17 @@ header{
 }
 
 
-.g_nav .g_nav_drop_cont .gnb_dropMenu_item {
+.gnb_menu .gnb_dropMenu_wrap .gnb_dropMenu_item {
   display: block;
   padding: 0 0 0 28px;
   color: #ececec;
   line-height: 1.2;
 }
 
-.g_nav .g_nav_drop_cont .gnb_dropMenu_item:hover{
+.gnb_menu .gnb_dropMenu_wrap .gnb_dropMenu_item:hover{
   color: #fff;
   filter: alpha(100);
 }
-
-
-
 
 
 
@@ -456,7 +462,7 @@ main img{
     width: 46px;
     height: 46px;
     /* background-color: red; */
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.4);
     filter: alpha(opacity=100);
     font-size: 24px;
     color: #ffffff;
