--- a/www.100min.co.kr/css/regular.minad76.css
+++ b/www.100min.co.kr/css/regular.minad76.css
@@ -9,7 +9,8 @@
   font-display: auto;
   src: url(../font/fa-regular-400.eot);
   src: url(../font/fa-regular-400.html) format("woff2");
-    /* url(../webfonts/fa-regular-400.woff) format("woff"),
+    /* 
+    url(../webfonts/fa-regular-400.woff) format("woff"),
     url(../webfonts/fa-regular-400.ttf) format("truetype"),
     url(../webfonts/fa-regular-400.svg#fontawesome) format("svg"); */
 }
