--- a/www.100min.co.kr/css/global.css
+++ b/www.100min.co.kr/css/global.css
@@ -12,9 +12,52 @@ font-family: 'kopub' !important;
 }
 /* origin source by useanyfont END */
 
-/* [fonts] */
+/* [100min] fonts */
 
+/*!
+ * Font Awesome Free 5.9.0 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ */
+ @font-face {
+  font-family: "Font Awesome 5 Free";
+  font-style: normal;
+  font-weight: 900;
+  font-display: auto;
+  src: url(../font/fa-solid-900.eot);
+  src: 
+    url(../font/fa-solid-900.html) format("woff2")
+    /* 
+    url(../webfonts/fa-solid-900d41d.eot?#iefix) format("embedded-opentype"),
+    url(../webfonts/fa-solid-900.woff) format("woff"),
+    url(../webfonts/fa-solid-900.ttf) format("truetype"),
+    url(../webfonts/fa-solid-900.svg#fontawesome) format("svg"); */
+}
+.fa,
+.fas {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
 
+/*!
+ * Font Awesome Free 5.9.0 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ */
+ @font-face {
+  font-family: "Font Awesome 5 Free";
+  font-style: normal;
+  font-weight: 400;
+  font-display: auto;
+  src: url(../font/fa-regular-400.eot);
+  src: url(../font/fa-regular-400.html) format("woff2");
+    /* 
+    url(../webfonts/fa-regular-400.woff) format("woff"),
+    url(../webfonts/fa-regular-400.ttf) format("truetype"),
+    url(../webfonts/fa-regular-400.svg#fontawesome) format("svg"); */
+}
+.far {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+}
 
 
 /* [fonts] END*/
