--- a/연습/220322 설문조사 연습/css/default.css
+++ b/연습/220322 설문조사 연습/css/default.css
@@ -4,6 +4,27 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@keyframes fadeIn{
+    from {opacity: 0;}
+    to{opacity: 1;}
+}
+
+@keyframes fadeOut{
+    from {opacity: 1;}
+    to{opacity: 0;}
+}
+
+@-webkit-keyframes fadeIn{
+    from {opacity: 0;}
+    to{opacity: 1;}
+}
+
+@-webkit-keyframes fadeIn{
+    from {opacity: 1;}
+    to{opacity: 0;}
+}
+
 *{
     font-family: 'BMJUA';
 }
@@ -12,3 +33,4 @@ body{
     
     background-color: aqua;
 }
+
