--- a/연습/220322 설문조사 연습/css/default.css
+++ b/연습/220322 설문조사 연습/css/default.css
@@ -34,3 +34,12 @@ body{
     background-color: aqua;
 }
 
+.fadeIn{
+    animation: fadeIn;
+    animation-duration: 0.5s;
+}
+
+.fadeOut{
+    animation: fadeOut;
+    animation-duration: 0.5s;
+}
