--- a/연습/220322 설문조사 연습/css/main.css
+++ b/연습/220322 설문조사 연습/css/main.css
@@ -1,8 +1,32 @@
+ 
 #main{
     width: 80%;
     background-color: #fff;
     text-align: center;
 }
+
 .start{
     color: #fff;
+}
+#qna{
+}
+.qBox{
+    background-color: whitesmoke;
+    text-align: center;
+    border-radius: 20px;
+    font-size: 20px ;
+    width: 80%;
+}
+.answerList{
+    background-color: whitesmoke;
+    border-radius: 20px;
+    width: 80%;
+    display: block;
+    border: 0px;
+}
+
+.answerList:hover, .answerList:focus{
+    opacity: 0.9;
+    /* background-color: rgba(0,255,255,0.8);
+    color: #fff; */
 }
