--- a/연습/220322 설문조사 연습/css/main.css
+++ b/연습/220322 설문조사 연습/css/main.css
@@ -60,8 +60,24 @@ p{
     text-align: center;
 }
 
-.resultName
+.resultName{
+    font-size: 20px;
+}
 
 .resultDesc{
     font-size: 20px;
+}
+
+.kakao{
+    border: none;
+    color: #fff;
+    background-color: #fee500;
+    border-radius: 10px;
+}
+
+.kakao:hover, .kakao:focus{
+    opacity: 0.9;
+    color: #000;
+    /* background-color: rgba(0,255,255,0.8);
+    color: #fff; */
 }
