--- a/연습/220322 설문조사 연습/css/main.css
+++ b/연습/220322 설문조사 연습/css/main.css
@@ -81,3 +81,27 @@ p{
     /* background-color: rgba(0,255,255,0.8);
     color: #fff; */
 }
+
+.container img{
+    /* clip-path: polygon(44% 100%, 0 0, 100% 0); */
+}
+
+#shareResult{
+    width: 80%;
+    background-color: #fff;
+    text-align: center;
+}
+
+.gohome{
+    border: none;
+    color:  #fff;
+    background-color:rgb(0, 195, 255);
+    border-radius: 10px;
+}
+
+.gohome:hover, .gohome:focus{
+    opacity: 0.9;
+    color: #000;
+    /* background-color: rgba(0,255,255,0.8);
+    color: #fff; */
+}
