--- a/연습/nodejs prc/views/profile-passport.ejs
+++ b/연습/nodejs prc/views/profile-passport.ejs
@@ -9,9 +9,9 @@
 <body>
     <h2>프로필 </h2>
     </hr>
-    <p>아이디 : apple</p>
-    <p>이름 : 잡스</p>
-    <p>나이 : 20</p>
-    <p><a href="/logout">로그아웃</a></p>
+    <p>아이디 : <%=user.userid%></p>
+    <p>이름 : <%=user.name%></p>
+    <p>나이 :  <%=user.age%></p>
+    <p><a href="/">로그아웃</a></p>
 </body>
 </html>
