--- a/연습/react prc/test/src/App.css
+++ b/연습/react prc/test/src/App.css
@@ -1,3 +1,13 @@
+.box{
+  width: 200px;
+  height: 50px;
+  background: deeppink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*
 .App {
   text-align: center;
 }
@@ -36,3 +46,4 @@
     transform: rotate(360deg);
   }
 }
+*/
