--- a/연습/react prc/todolist/src/app.css
+++ b/연습/react prc/todolist/src/app.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+/* .todos li{
+  list-style: none;
+} */
+
 button{
   outline: none;
   border : 0;
@@ -12,6 +16,13 @@ button{
   font-size: 2.5rem;
   padding :0.5em;
   list-style: none;
+}
+.todo li{
+  list-style: none;
+}
+.todo-name{
+  font-size: 3.0rem;
+  padding :0.5em
 }
 
 .todo-count{
