--- a/연습/react prc/todolist/src/app.css
+++ b/연습/react prc/todolist/src/app.css
@@ -24,6 +24,20 @@
   margin-right: 0.6rem;
 }
   
+.add-input{
+  font-size:2rem;
+}
+
+.add-button, .todos-reset{
+  font-size: 1.5rem;
+  padding : 0.3em 0.5em;
+  background-color: #0d6efd;
+  color:#fff;
+  border-radius: 0.5rem;
+  margin-left: 0.5rem;
+}
+
+
 button{
   outline: none;
   border : 0;
